[Fixes #72746948] By overriding z-index of some leaflet and SC styles, changing them to 'inherit' rather than a specific number, we keep the map controls from floating above everything in the widow.

--- a/apps/dg/resources/dg-leaflet.css
+++ b/apps/dg/resources/dg-leaflet.css
@@ -47,3 +47,11 @@ sc_require('resources/leaflet-0/leaflet.css')
     height: 0px;
     padding: 0px;
 }
+
+.leaflet-control {
+    z-index: inherit;
+}
+.leaflet-top,
+.leaflet-bottom {
+    z-index: inherit;
+}
